--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Hello World</h1>
     <div><p class="first">First project</p></div>
+    <div><p class="first">First project</p></div>
 </body>
 </html>
